--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "three-pathfinding": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
