--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.16",
+    "@mui/x-charts": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.164.1",
