--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,8 +2,8 @@ FROM node:18
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY ./server/package*.json ./
 
 RUN npm install
 
-COPY . .
+COPY ./server .
